Added admin controls in abdicate and player /join